# cargo-llms-txt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
src/: generator.rs  main.rs  project_info.rs  visitors.rs
tests/: integration_test.rs
tests/fixtures/complex_project/: Cargo.toml  README.md
tests/fixtures/complex_project/src/: lib.rs
tests/fixtures/complex_project/tests/: integration_tests.rs
tests/fixtures/simple_project/: Cargo.toml  README.md
tests/fixtures/simple_project/src/: lib.rs
