[package]
name = "cargo-llms-txt"
version = "0.1.1"
edition = "2021"
description = "Cargo subcommand to generate llms.txt and llms-full.txt from Rust projects"
authors = ["masinc"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/masinc/cargo-llms-txt"
keywords = ["cargo", "llm", "subcommand"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-llms-txt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
